modules/apps/langfuse/ingress_tls/manifests/langfuse_tls.Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "oci-native-ingress"
    oci-native-ingress.oraclecloud.com/freeform-tags: '{"source": "oci-native-ingress"}'
    oci-native-ingress.oraclecloud.com/policy: "IP_HASH"
    oci-native-ingress.oraclecloud.com/http-listener-port: "80"
    oci-native-ingress.oraclecloud.com/https-listener-port: "443"
  name: langfuse-ingress
  namespace: langfuse
spec:
  ingressClassName: oci-native-ingress
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: langfuse-web
            port:
              number: 3000
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - ${LANGFUSE_HOSTNAME}
    secretName: langfuse-web-ssl-certificate-secret # < cert-manager will store the created certificate in this secret.
